<resources>
    <string name="app_name">LoginSQLiteActivity</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="gender_hint">Gender</string>
    <string name="save_btn_text">SAVE</string>
    <string name="sign_in_text">Welcome! Please enter information below to set up an account.</string>
    <string name="log_in_text">Welcome! Please enter your login credentials below to log in.</string>
    <string name="sign_in_btn_text">SIGN IN</string>
    <string name="welcome_text">Welcome,</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>